--- a/src/components/Projects/project-list.json
+++ b/src/components/Projects/project-list.json
@@ -10,17 +10,40 @@
         "Stripe",
         "Strapi",
         "GraphQL",
-        "Apollo"
+        "Apollo",
+        "Docker",
+        "Digital Ocean"
       ],
-      "links": [{ "demo": "", "github": "", "image": "" }],
-      "demoCreds": [{ "username": "", "password": "" }]
+      "links": {
+        "demo": "https://thomasvillefoodie-dawry.ondigitalocean.app/",
+        "github": "https://github.com/CaptainPoldark/thomasvillefoodie",
+        "image": ""
+      },
+      "demoCreds": { "username": "test", "password": "" }
     },
     {
       "title": "Bad Bank",
       "description": "An intentionally insecure Banking app that allows processing transactions, and viewing the transactions on the transactions page.",
-      "tech": ["React.Js"],
-      "links": [{ "demo": "", "github": "", "image": "" }],
-      "demoCreds": [{ "username": "", "password": "" }]
+      "tech": ["React.Js", "AWS"],
+      "links": {
+        "demo": "https://jonathankyle-badbank.s3.us-east-2.amazonaws.com/index.html",
+        "github": "https://github.com/CaptainPoldark/badbank",
+        "image": ""
+      },
+      "demoCreds": 
+        { "username": "jneutron@protonmail.com", "password": "Goddard" }
+      
+    },
+    {
+      "title": "MBTA Bus Tracker",
+      "description": "This application tracks the real time movements of the buses in the City of Boston using the MBTA Rest API.",
+      "tech": ["HTML5", "REST", "Plain Javascript", "Open Street Map"],
+      "links": {
+        "demo": "https://captainpoldark.github.io/mbta-tracker/",
+        "github": "https://github.com/CaptainPoldark/mbta-tracker",
+        "image": ""
+      },
+      "demoCreds": { "username": "", "password": "" }
     }
   ]
 }
