--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "github-pages": "^3.0.2",
     "pdfjs-dist": "^2.13.216",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
