Added Demo credentials to Thomasville Foodie project

--- a/src/components/Projects/project-list.json
+++ b/src/components/Projects/project-list.json
@@ -19,7 +19,7 @@
         "github": "https://github.com/CaptainPoldark/thomasvillefoodie",
         "image": ""
       },
-      "demoCreds": { "username": "test", "password": "" }
+      "demoCreds": { "username": "jneutron@protonmail.com", "password": "Goddard" }
     },
     {
       "title": "Bad Bank",
