--- a/src/components/Projects/project-list.json
+++ b/src/components/Projects/project-list.json
@@ -52,7 +52,7 @@
       "links": {
         "demo": "https://captainpoldark.github.io/mv_frontend_challenge_1/",
         "github": "https://github.com/CaptainPoldark/mv_frontend_challenge_1",
-        "image": ""
+        "image": "mv-frontend_challenge_1.jpg"
       },
       "demoCreds": { "username": "", "password": "" }
     }
