--- a/src/components/Projects/project-list.json
+++ b/src/components/Projects/project-list.json
@@ -41,7 +41,7 @@
       "links": {
         "demo": "https://captainpoldark.github.io/mbta-tracker/",
         "github": "https://github.com/CaptainPoldark/mbta-tracker",
-        "image": ""
+        "image": "bus_tracker.jpg"
       },
       "demoCreds": { "username": "", "password": "" }
     },
