updated project list
added grepkast to the projects list

--- a/src/components/Projects/project-list.json
+++ b/src/components/Projects/project-list.json
@@ -55,6 +55,17 @@
         "image": "mv-frontend_challenge_1.jpg"
       },
       "demoCreds": { "username": "", "password": "" }
+    },
+    {
+      "title": "GrepKast",
+      "description": "Podcast player made using React. The current episode played progress can be saved and recalled automaticall when opening the episode again. Additional podcast feeds can be added, and selected from the menu. A menu may be displayed showing the listen history, and progress.",
+      "tech": ["HTML5", "React Bootstrap"],
+      "links": {
+        "demo": "https://captainpoldark.github.io/grepkast/",
+        "github": "https://github.com/CaptainPoldark/grepkast",
+        "image": ""
+      },
+      "demoCreds": { "username": "", "password": "" }
     }
   ]
 }
